// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProgressBadge styles should render the component correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="43.54247417875453"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
        >
          0
          %
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
    >
      <svg
        height="16"
        width="16"
      >
        <circle
          class="stroke-gray-200 dark:stroke-neutral-600"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-width="2"
        />
        <circle
          class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-dasharray="43.982297150257104"
          stroke-dashoffset="43.54247417875453"
          stroke-linecap="round"
          stroke-width="2"
          transform="rotate(-90 8 8)"
        />
      </svg>
      <span
        class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
      >
        0
        %
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProgressBadge styles should render the component correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="43.54247417875453"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
        >
          0
          %
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="32.98672286269283"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
        >
          25
          %
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
    >
      <svg
        height="16"
        width="16"
      >
        <circle
          class="stroke-gray-200 dark:stroke-neutral-600"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-width="2"
        />
        <circle
          class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-dasharray="43.982297150257104"
          stroke-dashoffset="32.98672286269283"
          stroke-linecap="round"
          stroke-width="2"
          transform="rotate(-90 8 8)"
        />
      </svg>
      <span
        class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
      >
        25
        %
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProgressBadge styles should render the component correctly 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="43.54247417875453"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
        >
          0
          %
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="32.98672286269283"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
        >
          25
          %
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-green-600 dark:stroke-green-400 text-green-600 dark:text-green-400"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="17.59291886010284"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-green-600 dark:stroke-green-400 text-green-600 dark:text-green-400"
        >
          60
          %
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
    >
      <svg
        height="16"
        width="16"
      >
        <circle
          class="stroke-gray-200 dark:stroke-neutral-600"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-width="2"
        />
        <circle
          class="stroke-green-600 dark:stroke-green-400 text-green-600 dark:text-green-400"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-dasharray="43.982297150257104"
          stroke-dashoffset="17.59291886010284"
          stroke-linecap="round"
          stroke-width="2"
          transform="rotate(-90 8 8)"
        />
      </svg>
      <span
        class="stroke-green-600 dark:stroke-green-400 text-green-600 dark:text-green-400"
      >
        60
        %
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProgressBadge styles should render the component correctly 4`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="43.54247417875453"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-primary dark:stroke-white text-neutral-600 dark:text-white/80"
        >
          0
          %
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="32.98672286269283"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-amber-600 dark:stroke-amber-400 text-amber-700 dark:text-amber-400"
        >
          25
          %
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-green-600 dark:stroke-green-400 text-green-600 dark:text-green-400"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="17.59291886010284"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-green-600 dark:stroke-green-400 text-green-600 dark:text-green-400"
        >
          60
          %
        </span>
      </div>
    </div>
    <div>
      <div
        class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
      >
        <svg
          height="16"
          width="16"
        >
          <circle
            class="stroke-gray-200 dark:stroke-neutral-600"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-width="2"
          />
          <circle
            class="stroke-green-700 dark:stroke-green-500 text-green-700 dark:text-green-500"
            cx="8"
            cy="8"
            fill="none"
            r="7"
            stroke-dasharray="43.982297150257104"
            stroke-dashoffset="4.3982297150257095"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 8 8)"
          />
        </svg>
        <span
          class="stroke-green-700 dark:stroke-green-500 text-green-700 dark:text-green-500"
        >
          90
          %
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex items-center justify-center gap-1 rounded-md border border-neutral-200 px-1 py-0.5 font-semibold text-neutral-600 shadow-sm dark:border-neutral-700 dark:text-white/80"
    >
      <svg
        height="16"
        width="16"
      >
        <circle
          class="stroke-gray-200 dark:stroke-neutral-600"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-width="2"
        />
        <circle
          class="stroke-green-700 dark:stroke-green-500 text-green-700 dark:text-green-500"
          cx="8"
          cy="8"
          fill="none"
          r="7"
          stroke-dasharray="43.982297150257104"
          stroke-dashoffset="4.3982297150257095"
          stroke-linecap="round"
          stroke-width="2"
          transform="rotate(-90 8 8)"
        />
      </svg>
      <span
        class="stroke-green-700 dark:stroke-green-500 text-green-700 dark:text-green-500"
      >
        90
        %
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
